과거 내용 복습 및 Chapter6_필사 완료

--- a/pyspark/spark_guide/Chapter2_스파크_간단히_살펴보기.ipynb
+++ b/pyspark/spark_guide/Chapter2_스파크_간단히_살펴보기.ipynb
@@ -32,7 +32,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://172.30.1.15:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.168.207:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -48,7 +48,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fbffbf159d0>"
+       "<pyspark.sql.session.SparkSession at 0x7fdc76f15e50>"
       ]
      },
      "execution_count": 1,
@@ -64,9 +64,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[number: bigint]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "myRange = spark.range(1000).toDF('number')"
+    "myRange = spark.range(1000).toDF('number')\n",
+    "myRange"
    ]
   },
   {
@@ -105,7 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CSV 파일 로드하기\n",
+    "flightData2015 = spark\\\n",
+    "                 .read\\\n",
+    "                 .option('inferSchema', 'true')\\\n",
+    "                 .option('header', 'true')\\\n",
+    "                 .csv('/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2015-summary.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +141,34 @@
     "                 .option('inferSchema', 'true')\\ # 스키마 정보를 알아내는 옵션\n",
     "                 .option('header', 'true')\\ # 첫 row를 헤더로 지정하는 옵션\n",
     "                 .csv('/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2015-summary.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame[DEST_COUNTRY_NAME: string, ORIGIN_COUNTRY_NAME: string, count: int]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.sql.dataframe.DataFrame"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(flightData2015)\n",
+    "type(flightData2015)"
    ]
   },
   {
@@ -153,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +220,7 @@
        " Row(DEST_COUNTRY_NAME='United States', ORIGIN_COUNTRY_NAME='India', count=62)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +249,7 @@
      "text": [
       "== Physical Plan ==\n",
       "*(1) Sort [count#22 ASC NULLS FIRST], true, 0\n",
-      "+- Exchange rangepartitioning(count#22 ASC NULLS FIRST, 200), true, [id=#32]\n",
+      "+- Exchange rangepartitioning(count#22 ASC NULLS FIRST, 200), true, [id=#50]\n",
       "   +- FileScan csv [DEST_COUNTRY_NAME#20,ORIGIN_COUNTRY_NAME#21,count#22] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
       "\n",
       "\n"
@@ -217,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +281,7 @@
        " Row(DEST_COUNTRY_NAME='Moldova', ORIGIN_COUNTRY_NAME='United States', count=1)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "런타임: 0.07645416259765625\n"
+      "런타임: 0.10617208480834961\n"
      ]
     }
    ],
@@ -267,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "런타임: 0.07906484603881836\n"
+      "런타임: 0.09792113304138184\n"
      ]
     }
    ],
@@ -299,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +396,7 @@
      "text": [
       "== Physical Plan ==\n",
       "*(2) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[count(1)])\n",
-      "+- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#164]\n",
+      "+- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#103]\n",
       "   +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[partial_count(1)])\n",
       "      +- FileScan csv [DEST_COUNTRY_NAME#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string>\n",
       "\n",
@@ -363,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +426,7 @@
      "text": [
       "== Physical Plan ==\n",
       "*(2) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[count(1)])\n",
-      "+- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#183]\n",
+      "+- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#122]\n",
       "   +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[partial_count(1)])\n",
       "      +- FileScan csv [DEST_COUNTRY_NAME#20] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string>\n",
       "\n",
@@ -398,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +461,7 @@
        "[Row(max(count)=370002)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -428,12 +482,13 @@
        "[Row(max(count)=370002)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# DataFrame 구문\n",
     "from pyspark.sql.functions import max\n",
     "\n",
     "flightData2015.select(max('count')).take(1)"
@@ -448,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +545,9 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "TakeOrderedAndProject(limit=5, orderBy=[aggOrder#121L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#20,destination_total#119L])\n",
+      "TakeOrderedAndProject(limit=5, orderBy=[aggOrder#92L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#20,destination_total#90L])\n",
       "+- *(2) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[sum(cast(count#22 as bigint))])\n",
-      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#354]\n",
+      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#231]\n",
       "      +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[partial_sum(cast(count#22 as bigint))])\n",
       "         +- FileScan csv [DEST_COUNTRY_NAME#20,count#22] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
       "\n",
@@ -506,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -550,9 +605,9 @@
      "output_type": "stream",
      "text": [
       "== Physical Plan ==\n",
-      "TakeOrderedAndProject(limit=5, orderBy=[destination_total#168L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#20,destination_total#168L])\n",
+      "TakeOrderedAndProject(limit=5, orderBy=[destination_total#139L DESC NULLS LAST], output=[DEST_COUNTRY_NAME#20,destination_total#139L])\n",
       "+- *(2) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[sum(cast(count#22 as bigint))])\n",
-      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#378]\n",
+      "   +- Exchange hashpartitioning(DEST_COUNTRY_NAME#20, 5), true, [id=#293]\n",
       "      +- *(1) HashAggregate(keys=[DEST_COUNTRY_NAME#20], functions=[partial_sum(cast(count#22 as bigint))])\n",
       "         +- FileScan csv [DEST_COUNTRY_NAME#20,count#22] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex[file:/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/flight-data/csv/2..., PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,count:int>\n",
       "\n",
@@ -569,6 +624,13 @@
     "        .limit(5)\n",
     "dfWay.explain()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
