--- a/pyspark/spark_guide/Chapter3_스파크_기능_둘러보기.ipynb
+++ b/pyspark/spark_guide/Chapter3_스파크_기능_둘러보기.ipynb
@@ -200,6 +200,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "educated-structure",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Physical Plan ==\n",
+      "StreamingRelation FileSource[/Users/younghun/Desktop/gitrepo/data/spark_perfect_guide/retail-data/by-day/*.csv], [InvoiceNo#106, StockCode#107, Description#108, Quantity#109, InvoiceDate#110, UnitPrice#111, CustomerID#112, Country#113]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "streamingDataFrame.explain()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "absolute-subsection",
    "metadata": {},
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "south-stream",
    "metadata": {},
    "outputs": [],
@@ -234,17 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "vanilla-delivery",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.streaming.StreamingQuery at 0x7fa9fa8fce50>"
+       "<pyspark.sql.streaming.StreamingQuery at 0x7f9bce5f9250>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "numerical-cameroon",
    "metadata": {},
    "outputs": [
@@ -273,15 +294,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------------------+---------------+\n",
-      "|CustomerID|              window|sum(total_cost)|\n",
-      "+----------+--------------------+---------------+\n",
-      "|   13329.0|[2010-12-08 09:00...|          304.2|\n",
-      "|   12797.0|[2010-12-09 09:00...|         254.03|\n",
-      "|   16250.0|[2010-12-01 09:00...|         226.14|\n",
-      "|   15660.0|[2010-12-09 09:00...|          209.3|\n",
-      "|   17460.0|[2010-12-01 09:00...|           19.9|\n",
-      "+----------+--------------------+---------------+\n",
+      "+----------+--------------------+------------------+\n",
+      "|CustomerID|              window|   sum(total_cost)|\n",
+      "+----------+--------------------+------------------+\n",
+      "|   17576.0|[2010-12-13 09:00...|177.35000000000002|\n",
+      "|   17368.0|[2011-01-06 09:00...| 563.1500000000001|\n",
+      "|   15208.0|[2010-12-21 09:00...|              65.4|\n",
+      "|   15039.0|[2010-12-14 09:00...| 706.2500000000002|\n",
+      "|   16250.0|[2010-12-01 09:00...|            226.14|\n",
+      "+----------+--------------------+------------------+\n",
       "only showing top 5 rows\n",
       "\n"
      ]
@@ -298,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "defined-mumbai",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyspark.sql.streaming.StreamingQuery at 0x7fa9fa8f0f50>"
+       "<pyspark.sql.streaming.StreamingQuery at 0x7f9bce04b150>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "junior-dubai",
    "metadata": {},
    "outputs": [
@@ -374,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "silver-midnight",
    "metadata": {},
    "outputs": [],
@@ -390,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "widespread-blast",
    "metadata": {},
    "outputs": [
@@ -426,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "racial-effect",
    "metadata": {},
    "outputs": [
@@ -460,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "meaningful-processor",
    "metadata": {},
    "outputs": [],
@@ -482,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "proved-yorkshire",
    "metadata": {},
    "outputs": [],
@@ -513,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "floral-transfer",
    "metadata": {},
    "outputs": [],
@@ -536,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "altered-hacker",
    "metadata": {},
    "outputs": [],
@@ -549,21 +570,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "threaded-words",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 변환자(Transformer)를 적합(fit)시키기\n",
+    "# 1. 변환자(Transformer)를 적합(fit)시키기(변환시킬 데이터프레임 인자로 넣어주기)\n",
     "fittedPipeline = transformationsPipeline.fit(trainDataFrame)\n",
     "\n",
-    "# 2. 파이프라인에 지정된 변환자들 사용해 데이터 변환\n",
-    "transformedTraining = fittedPipeline.transform(trainDataFrame)"
+    "# 2. 파이프라인에 지정된 변환자들 사용해 데이터 변환(변환시킬 데이터프레임 인자로 넣어주기)\n",
+    "transformedTraining = fittedPipeline.transform(trainDataFrame)\n",
+    "\n",
+    "transformedTest = fittedPipeline.transform(testDataFrame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "defensive-thirty",
    "metadata": {},
    "outputs": [
@@ -573,7 +596,7 @@
        "DataFrame[InvoiceNo: string, StockCode: string, Description: string, Quantity: int, InvoiceDate: string, UnitPrice: double, CustomerID: double, Country: string, day_of_week: string, day_of_week_index: double, day_of_week_encoded: vector, features: vector]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "controlling-aerospace",
    "metadata": {},
    "outputs": [],
@@ -605,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "after-following",
    "metadata": {},
    "outputs": [
@@ -613,7 +636,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "소요 시간: 2.778 초\n"
+      "소요 시간: 17.098 초\n"
      ]
     }
    ],
@@ -660,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "digital-shipping",
    "metadata": {},
    "outputs": [
@@ -687,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "missing-engine",
    "metadata": {},
    "outputs": [
@@ -722,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "id": "convertible-logic",
    "metadata": {},
    "outputs": [
@@ -745,7 +768,7 @@
     "# 간단하게 RDD로 만들고 DataFrame으로 변환하기\n",
     "from pyspark.sql import Row\n",
     "\n",
-    "rdd_df = spark.sparkContext.parallelize([Row(1), Row(2), Row(3)]).toDF()\n",
+    "rdd_df = spark.sparkContext.parallelize([Row(1), Row(2), Row(3)]).toDF() # 트랜스폼!\n",
     "rdd_df.show() # 액션!"
    ]
   },
