--- a/pyspark/spark_guide/Chapter7_집계연산.ipynb
+++ b/pyspark/spark_guide/Chapter7_집계연산.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#집계-연산\" data-toc-modified-id=\"집계-연산-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>집계 연산</a></span><ul class=\"toc-item\"><li><span><a href=\"#집계-함수\" data-toc-modified-id=\"집계-함수-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>집계 함수</a></span><ul class=\"toc-item\"><li><span><a href=\"#count\" data-toc-modified-id=\"count-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>count</a></span></li><li><span><a href=\"#countDistinct\" data-toc-modified-id=\"countDistinct-1.1.2\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>countDistinct</a></span></li><li><span><a href=\"#approx_count_distinct\" data-toc-modified-id=\"approx_count_distinct-1.1.3\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>approx_count_distinct</a></span></li><li><span><a href=\"#first,-last\" data-toc-modified-id=\"first,-last-1.1.4\"><span class=\"toc-item-num\">1.1.4&nbsp;&nbsp;</span>first, last</a></span></li><li><span><a href=\"#min,-max\" data-toc-modified-id=\"min,-max-1.1.5\"><span class=\"toc-item-num\">1.1.5&nbsp;&nbsp;</span>min, max</a></span></li><li><span><a href=\"#sum\" data-toc-modified-id=\"sum-1.1.6\"><span class=\"toc-item-num\">1.1.6&nbsp;&nbsp;</span>sum</a></span></li><li><span><a href=\"#sumDistinct\" data-toc-modified-id=\"sumDistinct-1.1.7\"><span class=\"toc-item-num\">1.1.7&nbsp;&nbsp;</span>sumDistinct</a></span></li><li><span><a href=\"#avg,-mean\" data-toc-modified-id=\"avg,-mean-1.1.8\"><span class=\"toc-item-num\">1.1.8&nbsp;&nbsp;</span>avg, mean</a></span></li><li><span><a href=\"#분산과-표준편차\" data-toc-modified-id=\"분산과-표준편차-1.1.9\"><span class=\"toc-item-num\">1.1.9&nbsp;&nbsp;</span>분산과 표준편차</a></span></li><li><span><a href=\"#비대칭도(skewness),-첨도(kurtosis)\" data-toc-modified-id=\"비대칭도(skewness),-첨도(kurtosis)-1.1.10\"><span class=\"toc-item-num\">1.1.10&nbsp;&nbsp;</span>비대칭도(skewness), 첨도(kurtosis)</a></span></li><li><span><a href=\"#공분산과-상관관계\" data-toc-modified-id=\"공분산과-상관관계-1.1.11\"><span class=\"toc-item-num\">1.1.11&nbsp;&nbsp;</span>공분산과 상관관계</a></span></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#집계-연산\" data-toc-modified-id=\"집계-연산-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>집계 연산</a></span><ul class=\"toc-item\"><li><span><a href=\"#집계-함수\" data-toc-modified-id=\"집계-함수-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>집계 함수</a></span><ul class=\"toc-item\"><li><span><a href=\"#count\" data-toc-modified-id=\"count-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>count</a></span></li><li><span><a href=\"#countDistinct\" data-toc-modified-id=\"countDistinct-1.1.2\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>countDistinct</a></span></li><li><span><a href=\"#approx_count_distinct\" data-toc-modified-id=\"approx_count_distinct-1.1.3\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>approx_count_distinct</a></span></li><li><span><a href=\"#first,-last\" data-toc-modified-id=\"first,-last-1.1.4\"><span class=\"toc-item-num\">1.1.4&nbsp;&nbsp;</span>first, last</a></span></li><li><span><a href=\"#min,-max\" data-toc-modified-id=\"min,-max-1.1.5\"><span class=\"toc-item-num\">1.1.5&nbsp;&nbsp;</span>min, max</a></span></li><li><span><a href=\"#sum\" data-toc-modified-id=\"sum-1.1.6\"><span class=\"toc-item-num\">1.1.6&nbsp;&nbsp;</span>sum</a></span></li><li><span><a href=\"#sumDistinct\" data-toc-modified-id=\"sumDistinct-1.1.7\"><span class=\"toc-item-num\">1.1.7&nbsp;&nbsp;</span>sumDistinct</a></span></li><li><span><a href=\"#avg,-mean\" data-toc-modified-id=\"avg,-mean-1.1.8\"><span class=\"toc-item-num\">1.1.8&nbsp;&nbsp;</span>avg, mean</a></span></li><li><span><a href=\"#분산과-표준편차\" data-toc-modified-id=\"분산과-표준편차-1.1.9\"><span class=\"toc-item-num\">1.1.9&nbsp;&nbsp;</span>분산과 표준편차</a></span></li><li><span><a href=\"#비대칭도(skewness),-첨도(kurtosis)\" data-toc-modified-id=\"비대칭도(skewness),-첨도(kurtosis)-1.1.10\"><span class=\"toc-item-num\">1.1.10&nbsp;&nbsp;</span>비대칭도(skewness), 첨도(kurtosis)</a></span></li><li><span><a href=\"#공분산과-상관관계\" data-toc-modified-id=\"공분산과-상관관계-1.1.11\"><span class=\"toc-item-num\">1.1.11&nbsp;&nbsp;</span>공분산과 상관관계</a></span></li><li><span><a href=\"#복합-데이터-타입의-집계\" data-toc-modified-id=\"복합-데이터-타입의-집계-1.1.12\"><span class=\"toc-item-num\">1.1.12&nbsp;&nbsp;</span>복합 데이터 타입의 집계</a></span></li></ul></li><li><span><a href=\"#그룹화\" data-toc-modified-id=\"그룹화-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>그룹화</a></span><ul class=\"toc-item\"><li><span><a href=\"#표현식을-이용한-그룹화\" data-toc-modified-id=\"표현식을-이용한-그룹화-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>표현식을 이용한 그룹화</a></span></li></ul></li><li><span><a href=\"#윈도우-함수\" data-toc-modified-id=\"윈도우-함수-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>윈도우 함수</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "statewide-difficulty",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "disturbed-zoning",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "interim-cutting",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "capital-breast",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "alert-electron",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "constant-insurance",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "professional-tennessee",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "assured-minneapolis",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "naked-preparation",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "classical-argentina",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "civic-numbers",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "spoken-platform",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "induced-conservative",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "further-finnish",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "upper-council",
    "metadata": {},
    "outputs": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "textile-rhythm",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "included-dublin",
    "metadata": {},
    "outputs": [
@@ -588,9 +588,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "modified-amendment",
+   "metadata": {},
+   "source": [
+    "### 복합 데이터 타입의 집계\n",
+    "- 예를들어, 특정 칼럼의 값을 리스트, 셋(set)으로 수집이 가능한 메소드들\n",
+    "- ``agg``메소드를 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "heard-blade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+--------------------+\n",
+      "|collect_list(Country)|collect_set(Country)|\n",
+      "+---------------------+--------------------+\n",
+      "| [United Kingdom, ...|[Portugal, Italy,...|\n",
+      "+---------------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import collect_list, collect_set\n",
+    "\n",
+    "df.agg(collect_list('Country'), collect_set('Country')).show(truncate=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "binding-italic",
+   "metadata": {},
+   "source": [
+    "## 그룹화\n",
+    "- 데이터 그룹 기반의 집계를 수행\n",
+    "    - ex) 고유한 송장번호를 기준으로 그룹화 -> 그룹별 물품 수를 카운트\n",
+    "    - pandas ex) ``df.groupby('InvoiceNo')['물품'].count()``, ``df.groupby('InvoiceNo').agg({'물품': 'count})``\n",
+    "- 데이터 그룹화 집계 시에도 지연방식으로 수행됨\n",
+    "    - 데이터 그룹화 시, ``RelationalGroupedDataset``이 반환되고,\n",
+    "    - 집계 연산 수행 시, ``DataFrame``이 반환됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "relevant-chocolate",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----------+-----+\n",
+      "|InvoiceNo|CustomerId|count|\n",
+      "+---------+----------+-----+\n",
+      "|   536846|     14573|   76|\n",
+      "|   537026|     12395|   12|\n",
+      "|   537883|     14437|    5|\n",
+      "|   538068|     17978|   12|\n",
+      "|   538279|     14952|    7|\n",
+      "|   538800|     16458|   10|\n",
+      "|   538942|     17346|   12|\n",
+      "|  C539947|     13854|    1|\n",
+      "|   540096|     13253|   16|\n",
+      "|   540530|     14755|   27|\n",
+      "|   541225|     14099|   19|\n",
+      "|   541978|     13551|    4|\n",
+      "|   542093|     17677|   16|\n",
+      "|   536596|      null|    6|\n",
+      "|   537252|      null|    1|\n",
+      "|   538041|      null|    1|\n",
+      "|   543188|     12567|   63|\n",
+      "|   543590|     17377|   19|\n",
+      "|  C543757|     13115|    1|\n",
+      "|  C544318|     12989|    1|\n",
+      "+---------+----------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 그룹화시킬 칼럼을 다수 입력 가능 -> count를 메소드로 사용하는 방식\n",
+    "df.groupby(\"InvoiceNo\", \"CustomerId\").count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acoustic-recording",
+   "metadata": {},
+   "source": [
+    "### 표현식을 이용한 그룹화\n",
+    "- ``count``는 메서드로도 사용이 가능하지만 import 해서 함수를 사용하는 것을 권고\n",
+    "- ``select``구문에서 집계를 사용하는 것보다 ``agg`` 메서드를 사용하는 것이 한 번에 여러 집계를 처리할 수 있으며 집계에 표현식(``expr``)을 사용할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "immediate-cleaners",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+----+-----+\n",
+      "|InvoiceNo|quan|quan2|\n",
+      "+---------+----+-----+\n",
+      "|   536596|   6|    6|\n",
+      "|   536938|  14|   14|\n",
+      "|   537252|   1|    1|\n",
+      "|   537691|  20|   20|\n",
+      "|   538041|   1|    1|\n",
+      "|   538184|  26|   26|\n",
+      "|   538517|  53|   53|\n",
+      "|   538879|  19|   19|\n",
+      "|   539275|   6|    6|\n",
+      "|   539630|  12|   12|\n",
+      "+---------+----+-----+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import count # import해서 count를 메소드로 사용 \n",
+    "\n",
+    "df.groupBy(\"InvoiceNo\") \\\n",
+    "  .agg(count(\"Quantity\").alias('quan'),\n",
+    "      expr(\"count(Quantity) as quan2\")\n",
+    "      ) \\\n",
+    "  .show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "covered-paste",
+   "metadata": {},
+   "source": [
+    "## 윈도우 함수\n",
+    "- **윈도우 명세(Window Specification)**를 정의해주어야 함\n",
+    "- ``group-by``는 모든 row 레코드들이 단일 그룹으로만 이동\n",
+    "- 반면, 윈도우 함수는 프레임에 입력되는 모든 로우에 대해 결괏값을 계산\n",
+    "    - 프레임: row 그룹 기반의 테이블\n",
+    "    - 각 로우는 하나 이상의 프레임에 할당될 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "juvenile-membrane",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 날짜를 기준으로 윈도우 함수를 만들려 하는 예제이므로 date 칼럼 생성\n",
+    "from pyspark.sql.functions import col, to_date\n",
+    "\n",
+    "dfWithDate = df.withColumn(\"date\", to_date(col(\"InvoiceDate\"), \"MM/d/yyyy H:mm\"))\n",
+    "# 임시 view 테이블로 생성 for 트랜스포메이션 적용 결과 보기 위함\n",
+    "dfWithDate.createOrReplaceTempView(\"dfWithDate\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "educated-showcase",
+   "metadata": {},
+   "source": [
+    "- SQL의 윈도우 함수: ``window_function() over (partition by 칼럼1, 칼럼2 order by 칼럼3 desc)``\n",
+    "- Pyspark의 윈도우 함수\n",
+    "    - ``partitionBy``: coalesce 메소드와 같이 파티셔닝관련 메소드와는 전혀 관련 없음! 그룹을 어떻게 나눌지 결정하는 개념임!\n",
+    "    - ``orderBy``: ``partitionBy``의 정렬 방식을 의미\n",
+    "    - ``rowsBetween``: 윈도우 함수의 프레임 명세를 의미하며 입력된 row들의 참조를 기반으로 프레임에 row가 포함될 수 있는지 결정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "unlike-watershed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ex1 -> \"고객, 시간대 별로 최대 구매 개수 집계\"\n",
+    "# 첫 로우부터 현재로우까지 모두 프레임에 포함될 수 있는지 확인하는 명세서 예제임\n",
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import desc\n",
+    "\n",
+    "# 윈도우 명세서\n",
+    "windowSpec = Window.partitionBy(\"CustomerId\", \"date\")\\\n",
+    "                   .orderBy(desc(\"Quantity\"))\\\n",
+    "                   .rowsBetween(Window.unboundedPreceding, Window.currentRow)\n",
+    "\n",
+    "\n",
+    "from pyspark.sql.functions import max\n",
+    "\n",
+    "maxPurchaseQuantity = max(col(\"Quantity\")).over(windowSpec)  # over에 윈도우명세서를 입력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "specified-jungle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pyspark.sql.column.Column'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 칼럼(표현식) 타입을 반환함 -> DataFrame의 select 구문에서 사용 가능 함!\n",
+    "print(type(maxPurchaseQuantity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "heard-tutorial",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ex2 -> 고객별로 최대 구매 수량을 가진 날짜가 언제인지\n",
+    "from pyspark.sql.functions import rank, dense_rank\n",
+    "\n",
+    "purchaseDenseRank = dense_rank().over(windowSpec)\n",
+    "purchaseRank = rank().over(windowSpec)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collective-commercial",
+   "id": "sensitive-paraguay",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 이제 위에서 수행한 3개의 윈도우 함수 집계 값을 select in dataframe 하기 -> 날짜 파싱에러 발생(일, 시간 한자리, 두자리 포맷 불일치.. 이거 통일 시킬 순 없나..?)\n",
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "dfWithDate.where(\"CustomerId IS NOT NULL\")\\\n",
+    "          .orderBy(\"CustomerId\")\\\n",
+    "          .select(col(\"CustomerId\"),\n",
+    "                 col(\"date\"),\n",
+    "                 col(\"Quantity\"),\n",
+    "                 purchaseDenseRank.alias(\"quantityDenseRank\"),\n",
+    "                 purchaseRank.alias(\"quantityRank\"),\n",
+    "                 maxPurchaseQuantity.alias(\"maxPurchaseQuantity\"))\\\n",
+    "          .show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "typical-oregon",
    "metadata": {},
    "outputs": [],
    "source": []
