--- a/DeepLearningFromBottom/Chapter05.ipynb
+++ b/DeepLearningFromBottom/Chapter05.ipynb
@@ -196,6 +196,7 @@
     "        self.db = None\n",
     "        \n",
     "    def forward(self, x):\n",
+    "        # out = x * W + b\n",
     "        self.x = x\n",
     "        out = np.matmul(x, self.W) + self.b\n",
     "        return out\n",
@@ -212,7 +213,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.11"
   },
   "toc": {
    "base_numbering": 1,
